Pregunta al azar hasta acertar, entonces navega

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p data-bind="text: botText"></p>
 				<input data-bind="value: userText" id="input" />
 				<button data-bind="click: getAnswer">Send</button>
-				<button data-bind="click: newQuestion">I don' know</button>
+				<button data-bind="click: dontknow">I don' know</button>
 		</div>
 
 	</div>
